example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-app
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: hello-world-app
