example/example-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-sally.test
      http:
        paths:
          - path: /|/(.+)
            backend:
              serviceName: hello-world-app
              servicePort: 80
    - host: hello-bob.test
      http:
        paths:
          - path: /|/(.+)
            backend:
              serviceName: hello-world-app
              servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-app
  namespace: kube-system
spec:
  type: ExternalName
  externalName: hello-world-app.default.svc.cluster.local
